have everything load at once

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
   border: 2px solid #ffffff;
   color: #7F3320;
   padding: 2% 1% 2% 1%;
-  margin: 0 auto 0.7% auto;
+  margin: 0 0.7% 0.7% auto;
   background-color: #ffffff;
   border-radius: 0.3em;
   box-shadow: .2em .2em .2em #444;
